<resources>
    <string name="app_name">LoL Guide</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="hello">Hello</string>
    <string name="lol_firebase">https://lol-guide.firebaseio.com/</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="question_mark">\?\?\?</string>
    <string-array name="titles">
        <item>Summoners</item>
        <item>Weekly Free Champions</item>
        <item>Discounts</item>
        <item>News</item>
        <item>Champions</item>
        <item>Items</item>
        <item>Runes</item>
        <item>Skins</item>
        <item>Live Match Info</item>
        <item>Live Broadcasts</item>
        <item>Settings</item>
        <item>Remove Ads</item>
        <item>Contact Us</item>
        <item>About</item>
    </string-array>
    <string-array name="titles_noad">
        <item>Summoners</item>
        <item>Weekly Free Champions</item>
        <item>Discounts</item>
        <item>News</item>
        <item>Champions</item>
        <item>Items</item>
        <item>Runes</item>
        <item>Skins</item>
        <item>Live Match Info</item>
        <item>Live Broadcasts</item>
        <item>Settings</item>
        <item>Contact Us</item>
        <item>About</item>
    </string-array>
    <string name="errortwitch">A connection error occured. Please try again.</string>
    <string name="areyousure">Are you sure you want to quit?</string>
    <string name="endorse">Please click on the ads to support further developments. Ads will only
        redirect you to Google Play Store. \n\n\nThis application isn’t endorsed by Riot Games and
        doesn’t reflect the views or opinions of Riot Games or anyone officially involved in
        producing or managing League of Legends. League of Legends and Riot Games are trademarks or
        registered trademarks of Riot Games, Inc. League of Legends © Riot Games, Inc.
    </string>
    <string name="send">Send</string>
    <string name="contact_text">You can write your complaints or suggestions to the textbox below
        and send us.
    </string>
    <string name="select_category">Choose Category</string>
    <string name="menu">Menu</string>
    <string name="pleaseEnterSummonerName">Please enter a summoner name.</string>
    <string name="pleaseSelectYourRegion">Please select your region.</string>
    <string name="pleaseEnterYourSummonerName">Please enter a summoner name.</string>
    <string name="video">Video</string>
    <string name="play">Play</string>
    <string name="mage">Mage</string>
    <string name="fighter">Fighter</string>
    <string name="assasin">Assassin</string>
    <string name="tank">Tank</string>
    <string name="marksman">Marksman</string>
    <string name="support">Support</string>
    <string name="buyucu">Mage</string>
    <string name="dovuscu">Fighter</string>
    <string name="suikastci">Assasin</string>
    <string name="nisanci">Marksman</string>
    <string name="destek">Support</string>
    <string name="tags">Properties</string>
    <string name="c">ç</string>
    <string name="g">ğ</string>
    <string name="i">ı</string>
    <string name="o">ö</string>
    <string name="s">ş</string>
    <string name="u">ü</string>
    <string name="C">Ç</string>
    <string name="G">Ğ</string>
    <string name="I">İ</string>
    <string name="O">Ö</string>
    <string name="S">Ş</string>
    <string name="U">Ü</string>
    <string name="searchHint">Enter a champion name ...</string>
    <string name="searchItemHint">Enter an item name ...</string>
    <string name="general">Overview</string>
    <string name="abilities">Abilities</string>
    <string name="legend">Legend</string>
    <string name="strategy">Strategy</string>
    <string name="startingItems">Starting Items</string>
    <string name="essentialItems">Essential Items</string>
    <string name="deffensiveItems">Deffensive Items</string>
    <string name="offensiveItems">Offensive Items</string>
    <string name="gold">Gold</string>
    <string name="searchC">SEARCH</string>
    <string name="search">SEARCH</string>
    <string name="loading">Loading...</string>
    <string name="summonerName">Enter summoner name...</string>
    <string name="selectRegion">Choose Region:</string>
    <string name="anErrorOccured">A connection error occured. Please try again.</string>
    <string name="team1">TEAM 1</string>
    <string name="team2">TEAM 2</string>
    <string name="matchTime">Match Time</string>
    <string name="playerNotCurrentlyPlaying">This summoner is not currently in a game.</string>
    <string name="matchInfo">Match Info</string>
    <string name="player">Summoner:</string>
    <string name="chosenChampion">Champion:</string>
    <string name="playerDetail">Summoner Detail</string>
    <string name="detailInfo">Detail</string>
    <string name="leagueInfo">League Info</string>
    <string name="matchHistory">Match History</string>
    <string name="lvl">Lvl.</string>
    <string name="league">League</string>
    <string name="unranked">UNRANKED</string>
    <string name="wonMatchCount">Number of Matches Won:</string>
    <string name="noChampFound">No champion found matching your search.</string>
    <string name="itemSearchHint">Enter an item name...</string>
    <string name="itemFrom">Other Items Necessary To Build That Item</string>
    <string name="itemTo">Other Items That This Item Can Be Upgraded To</string>
    <string name="noFrom">There are no items to build this item.</string>
    <string name="itemDetail">Item Detail</string>
    <string name="defence">Defence</string>
    <string name="attack">Attack</string>
    <string name="magic">Magic</string>
    <string name="health">Health</string>
    <string name="magic_resistance">Magic Resistance</string>
    <string name="health_regeneration">Health Regeneration</string>
    <string name="damage">Physical Damage</string>
    <string name="critical">Critical Damage</string>
    <string name="attack_speed">Attack Speed</string>
    <string name="life_steal">Life Steal</string>
    <string name="armor_penetration">Armor Penetration</string>
    <string name="spell_damage">Spell Damage</string>
    <string name="cooldown_reduction">Cooldown Reduction</string>
    <string name="mana">Mana</string>
    <string name="mana_reg">Mana Regeneration</string>
    <string name="magic_penet">Magic Penetration</string>
    <string name="spell_vamp">Spell Vamp</string>
    <string name="vision">Vision</string>
    <string name="movement">Movement Speed</string>
    <string name="Consumable">Consumable</string>
    <string name="gold_give">Gold</string>
    <string name="others">Others</string>
    <string name="armor">Armor</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="filter">Filter</string>
    <string name="noTo">This item cannot be upgraded into another item.</string>
    <string name="no_video_found">No video found.</string>
    <string name="passive">Passive</string>
    <string name="explanation">Explanation</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="turkey">Türkiye</string>
    <string name="settings">Settings</string>
    <string name="select_language">Language:</string>
    <string name="select_region">Region:</string>
    <string name="select_your_region">Select your region:</string>
    <string name="english">English</string>
    <string name="turkish">Turkish</string>
    <string name="region_br">BR</string>
    <string name="region_eune">EUNE</string>
    <string name="region_euwe">EUW</string>
    <string name="region_kr">KR</string>
    <string name="region_lan">LAN</string>
    <string name="region_las">LAS</string>
    <string name="region_na">NA</string>
    <string name="region_oce">OCE</string>
    <string name="region_pbe">PBE</string>
    <string name="region_ru">RU</string>
    <string name="region_tr">TR</string>
    <string name="save">SAVE</string>
    <string name="preferences_saved">Preferences Saved.</string>
    <string name="networkError">Please check your Internet connection.</string>
    <string name="createdAt">Published on</string>
    <string name="watch_full_screen">Click to watch the video fullscreen.</string>
    <string name="champion_sale">Champion Sale</string>
    <string name="skin_sale">Skin Sale</string>
    <string name="click_to_update">If you cannot see the video, please update the app to latest
        version by clicking here.
    </string>
    <string name="enter_username">Enter summoner name ...</string>
    <string name="cannot_find_username">Could not find the user, please make sure you entered
        summoner name and region correctly
    </string>
    <string name="custom_game">Custom Game</string>
    <string name="tutorial">Tutorial</string>
    <string name="tutorial_game">Tutorial Game</string>
    <string name="ranked_game">Ranked Game</string>
    <string name="summoners_rift">Summoner\'s Rift</string>
    <string name="aram">Howling Abyss</string>
    <string name="dominion">Crystal Scar</string>
    <string name="oneforall">One For All</string>
    <string name="kingporo">King Poro</string>
    <string name="ascension">Ascension</string>
    <string name="firstblood">First Blood</string>
    <string name="none">Custom Game</string>
    <string name="normal">Normal</string>
    <string name="odin">Dominion</string>
    <string name="aram_aram">ARAM</string>
    <string name="ranked">Ranked Game</string>
    <string name="sr6">6 vs. 6</string>
    <string name="cap5">Team Builder</string>
    <string name="urf">Ultra Rapid Fire</string>
    <string name="nightmare">Nightmare Bot</string>
    <string name="counter_pick">Counter Pick</string>
    <string name="bilgewater">Bilgewater</string>
    <string name="bot">Game Against AI</string>
    <string name="unknown">Unknown</string>
    <string name="statistics">STATISTICS</string>
    <string name="totalDamageDealt">Total Damage Dealt</string>
    <string name="totalDamageTaken">Total Damage Taken</string>
    <string name="goldEarned">Gold Earned</string>
    <string name="totalHeal">Total Heal</string>
    <string name="lagestKillingSpree">Largest Killing Spree</string>
    <string name="largestMultiKill">Largest MultiKill</string>
    <string name="magicDamageDealtPlayer">Magic Damage Dealt</string>
    <string name="physicalDamageDealtPlayer">Physical Damage Dealt</string>
    <string name="minionsKilled">Minions Killed</string>
    <string name="neutralMinionsKilled">Neutral Minions Killed</string>
    <string name="magicDamageTaken">Magic Damage Taken</string>
    <string name="physicalDamageTaken">Physical Damage Taken</string>
    <string name="totalTimeCrowdControlDealt">Total Time Crowd Control Dealt</string>
    <string name="turretsKilled">Turrets Killed</string>
    <string name="wardPlaced">Ward Placed</string>
    <string name="wardKilled">Ward Killed</string>
    <string name="ipEarned">Ip Earned</string>
    <string name="languageTurkish">Dil</string>
    <string name="languageEnglish">Language</string>
    <string name="regionTurkish">Bölge</string>
    <string name="regionEnglish">Region</string>
    <string name="turkishTurkish">Türkçe</string>
    <string name="recentSearches">Recent Searches</string>
    <string name="if_you_wanna_change_region">*Summoner will be searched within selected region. You can change region from settings page.</string>
    <string name="remove_ads">Remove Ads</string>
    <string name="remove_ads_explanation">You can remove ads and use the ad-free version of LoL Guide if you wish. </string>
    <string name="credits">All images used in this app are suitable for commercial use.</string>
    <string name="see_credits">Click here to see the credits for the images.</string>
</resources>