<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E8E6DC">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/searchTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/searchC"
                android:textColor="#4CBA8E"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="10dp"
                style="?android:attr/listSeparatorTextViewStyle"/>

            <EditText
                android:id="@+id/summonerNameET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/searchTitle"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:singleLine="true"
                android:hint="@string/summonerName"/>

            <TextView
                android:id="@+id/selectRegionTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text="@string/selectRegion"
                android:textColor="#4CBA8E"
                android:textStyle="bold"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_below="@+id/summonerNameET"/>

           <Spinner
               android:id="@+id/regionSpinner"
               android:layout_toRightOf="@+id/selectRegionTV"
               android:layout_marginLeft="15dp"
               android:layout_marginTop="10dp"
               android:layout_below="@+id/summonerNameET"
               android:layout_width="match_parent"
               android:layout_marginRight="10dp"
               android:layout_height="wrap_content">



           </Spinner>

           <Button
                android:id="@+id/searchButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/selectRegionTV"
                android:background="#3B90CE"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="15dp"
                android:textColor="@android:color/white"
                android:text="@string/search"/>

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>