<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
    android:background="@color/white">

    <ImageView android:layout_width="match_parent" android:layout_height="match_parent"
        android:id="@+id/parentBG"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/app_color"
        android:fillViewport="true"
        android:layout_centerHorizontal="true">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="35dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="35dp">

            <TextView
                android:id="@+id/selectLanguageText"
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/languageSpinner"
                android:layout_alignTop="@+id/languageSpinner"
                android:gravity="center_vertical"
                android:minWidth="50dp"
                android:text="@string/select_language"
                style="@style/whiteText18dp"
                android:textStyle="bold"
                />

            <Spinner
                android:id="@+id/languageSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_toRightOf="@+id/selectLanguageText">


            </Spinner>

            <TextView
                android:id="@+id/selectRegionText"
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/regionSpinner"
                android:layout_alignLeft="@+id/selectLanguageText"
                android:layout_alignRight="@+id/selectLanguageText"
                android:layout_alignTop="@+id/regionSpinner"
                android:gravity="center_vertical"
                android:minWidth="50dp"
                android:text="@string/select_region"
                style="@style/whiteText18dp"
                android:textStyle="bold"
                />

            <Spinner
                android:id="@+id/regionSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/languageSpinner"
                android:layout_alignRight="@+id/languageSpinner"
                android:layout_below="@+id/languageSpinner"
                android:layout_marginTop="20dp"
                android:layout_toRightOf="@+id/selectRegionText">
            </Spinner>

            <Button
                android:id="@+id/buttonSave"
                android:layout_width="match_parent" android:layout_height="wrap_content"
                    android:layout_below="@+id/regionSpinner"
                    android:layout_marginTop="20dp"
                    android:background="@color/red_text_color"
                    android:minHeight="50dp"
                    android:text="@string/save"
                    android:textSize="16sp"
                    android:textColor="@color/white"/>

            <TextView
                android:id="@+id/removeAdsExplanation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/remove_ads_explanation"
                android:textSize="15sp"
                android:layout_below="@+id/buttonSave"
                android:layout_marginTop="20dp"
                android:textColor="@color/white"/>

            <Button
                android:id="@+id/removeAdsButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/remove_ads"
                android:layout_below="@+id/removeAdsExplanation"
                android:layout_marginTop="15dp"
                android:background="@color/red_text_color"
                android:textColor="@color/white"/>


        </RelativeLayout>
    </ScrollView>

</RelativeLayout>