<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/parentBG"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/app_color"
            android:gravity="center">

            <TextView
                android:id="@+id/currentVersionTV"
                style="@style/whiteText15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp" />

            <TextView
                android:id="@+id/endorseTV"
                style="@style/whiteText15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/currentVersionTV"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="5dp"
                android:text="@string/endorse" />

            <TextView
                android:id="@+id/creditsTV"
                style="@style/whiteText15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/endorseTV"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="15dp"
                android:text="@string/credits" />

            <TextView
                android:id="@+id/seeCreditsTV"
                style="@style/whiteText15dpBold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/creditsTV"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/see_credits" />
        </RelativeLayout>
    </RelativeLayout>
</ScrollView>