<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <ImageView
        android:id="@+id/parentBG"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"/>

    <RelativeLayout android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingBottom="10dp"
                    android:background="@color/app_color">
        <RelativeLayout
            android:id="@+id/border"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/border_white"
            android:paddingBottom="15dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingTop="10dp">
            <RelativeLayout
                android:id="@+id/usernameRegionRL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="15dp">

                <EditText
                    android:id="@+id/usernameET"
                    style="@style/whiteText14dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/buttonSave"
                    android:layout_alignTop="@+id/buttonSave"
                    android:layout_marginRight="5dp"
                    android:layout_toLeftOf="@+id/buttonSave"
                    android:hint="@string/enter_username"
                    android:imeOptions="actionDone"
                    android:singleLine="true"
                    android:textColorHint="@color/white"
                    />

                <ImageButton android:id="@+id/buttonSave"
                             android:layout_width="80dp"
                             android:layout_height="40dp"
                             android:layout_alignParentRight="true"
                             android:layout_alignParentTop="true"
                             android:background="@color/red_text_color"
                             android:gravity="center"
                             android:src="@drawable/search_icon"/>


            </RelativeLayout>

            <TextView android:id="@+id/infoTV" style="@style/whiteText14dp"
                      android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:layout_below="@+id/usernameRegionRL"
                      android:layout_marginLeft="10dp"
                      android:layout_marginRight="10dp"
                      android:layout_marginTop="5dp"
                      android:text="@string/if_you_wanna_change_region"
                      android:textSize="12dp"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/recentSearchesRL"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/border"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/border_white"
            android:paddingBottom="15dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp"
            android:visibility="visible">

            <TextView
                android:id="@+id/recentSearchesTV"
                style="@style/whiteText16dp"
                android:textColor="@color/material_yellow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/recentSearches"
                />

            <ListView
                android:id="@+id/recentSearchesLV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/recentSearchesTV"
                android:layout_marginTop="10dp"
                android:divider="@color/white"
                android:dividerHeight="0.5dp">

            </ListView>

        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>